objects/LogRecording__c.object
<CustomObject>
    <fields>
        <fullName>DML__c</fullName>
        <label>DML</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL__c</fullName>
        <label>SOQL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log Recording</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reason__c</columns>
        <columns>Title__c</columns>
        <columns>DML__c</columns>
        <columns>SOQL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>